Added check for build plugins and updated libraries